2001-11-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: corrected gridding in Options dialog

2001-11-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added formatting of clock to local time, auto
	application of user colors on startup, and removed temporary
	work-around for accidental mini.net DNS hijack.

2001-11-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (msgDone): fixed typo in the ncode check.

2001-10-30  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added smiley detection for Windows/Mac.

2001-10-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Added a help dialog. Needs more help in it.
	* tkchat.tcl: Implemented patch 474859 for script startup.
	- Fixed bug 466011: rc file permissions to 0600.
	- Implemented feature request 466221: optionally hiding user
	entry/exit messages.
	- Implemented part of feature request 466091 to remember window
	geometry.

2001-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl (updateNames): Fixed the missing All Users item for
	the whisper option menu.
	* tkchat.tcl: Fixed logging the chat to a file, frink checked

2001-10-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: implemented feature request 466094 to allow
	logging to a user specified file using tcllib log package.

2001-10-15  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: added Retrieve menu item (patch 47026)
	* tkchat.tcl: implemented HTTP Redirect following (patch 47026)
	* tkchat.tcl: applied Tcl cleanup (patch 466317)
	
2001-10-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: used direct IP of mini.net to combat dns problems.

2001-09-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: corrected minor warnings and height of info box
	Added support for working as a scripted document (landers)

2001-09-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkchat.tcl: added options dialog, updated handling of nick
	updates, added debug menu.  (hartweg)
